Unify the code for line, tie line and hvdc line (#118)
* Refactor the code handling line, tie line and hvdc line in GeoDataService::getLinesByCountries method.
* Remove sonar issues on modified files
* Add hvdc and tie line in tests (previously missing)

Signed-off-by: Franck LECUYER <franck.lecuyer@rte-france.com>